Fix button alignment

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
   padding: 0.7em 2.125em;
   transition: all 0.4s;
   cursor: pointer;
+  align-self: flex-end;
 }
 
 .button:is(:hover, :focus) {
